--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,51 @@
 {
     "$schema": "https://inlang.com/schema/inlang-message-format",
-    "example_message": "Hello world {username}"
+
+    "nav_home": "Home",
+    "nav_about": "About",
+    "nav_work": "Work",
+    "nav_contact": "Contact",
+
+    "about_layout_bio": "Bio",
+    "about_layout_xp": "Experience",
+    "about_layout_edu": "Education",
+
+    "bio_1": "I am Lucas Faget, a web developer with a DUT in Computer Science and a Professional Bachelor's degree in Web Development, completed through an apprenticeship at Simpliciti.",
+    "bio_2": "Since October 2024, I have been working as a web developer at AGIRIS C2J (ISAGRI Group), based in Toulouse, where I mainly work with technologies such as PHP and JavaScript (including Laravel and Svelte).",
+
+    "xp_1_title": "Web Developer",
+    "xp_1_period": "Oct. 2024 - now",
+    "xp_1_company": "AGIRIS C2J (ISAGRI Group)",
+    "xp_1_location": "Toulouse, France",
+    "xp_1_description": "",
+
+    "xp_2_title": "Web Developer (Apprenticeship)",
+    "xp_2_period": "Jul. 2022 - Sept. 2023",
+    "xp_2_company": "Simpliciti",
+    "xp_2_location": "Bordeaux, France",
+    "xp_2_description": "",
+
+    "xp_3_title": "Web Development Internship",
+    "xp_3_period": "Jun. 2021 - Aug. 2021",
+    "xp_3_company": "Audit Action+",
+    "xp_3_location": "Toulouse, France",
+    "xp_3_description": "",
+
+    "edu_1_title": "Professional Bachelor's Degree in Web Development (DAWIN)",
+    "edu_1_period": "Sept. 2022 - Sept. 2023",
+    "edu_1_school": "IUT of Bordeaux",
+    "edu_1_location": "Bordeaux, France",
+    "edu_1_description": "",
+
+    "edu_2_title": "University Diploma in Computer Science (DUT)",
+    "edu_2_period": "Sept. 2020 - Sept. 2021",
+    "edu_2_school": "IUT Paul Sabatier",
+    "edu_2_location": "Toulouse, France",
+    "edu_2_description": "",
+
+    "edu_3_title": "Bachelor's Degree in Physics",
+    "edu_3_period": "2016 - 2019",
+    "edu_3_school": "University of Pau",
+    "edu_3_location": "Pau, France",
+    "edu_3_description": ""
 }
